[package]
name = "lightarchitects"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Light Architects SDK — core, clients, arena, oracle, helix, turnlog."
keywords = ["mcp", "ai", "sdk", "agentic", "lightarchitects"]
categories = ["development-tools", "network-programming", "api-bindings"]
documentation = "https://docs.rs/lightarchitects"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# Enable all sub-features by default so all modules compile unconditionally.
# Refine into opt-in feature flags once the monolith compiles cleanly.
[features]
default = [
    "sqlite", "search", "ingestion", "compaction",
    "cypher", "embedding-ollama", "embedding-fastembed", "embedding-llama-cpp",
    "observe", "conversations", "http-client",
    "neo4j", "file", "dual", "fastembed", "rerank",
    "ssh", "cli", "fleet",
]
sqlite               = []
search               = []
ingestion            = []
compaction           = []
cypher               = []
embedding-ollama     = []
embedding-fastembed  = []
embedding-llama-cpp  = []
observe              = []
conversations        = []
http-client          = []
neo4j                = []
file                 = []
dual                 = ["neo4j", "file"]
fastembed            = []
rerank               = []
ssh                  = []
cli                  = []
keychain             = []
text2cypher          = []
test-utils           = []
credentials          = []
providers-anthropic  = ["credentials"]
providers-openai     = ["credentials"]
providers-google     = ["credentials"]
credentials-display-names    = ["credentials"]
credentials-detailed-locator = ["credentials"]
# Enables ClaudeCliProvider — subprocess-based Claude CLI spawner.
# Does NOT gate LlmAgentProvider trait, AgentRequest, or SanitizedAgentRequest;
# those are always compiled and available to any provider implementor.
agent-cli = []
# Live agent fleet tracking — DashMap state machine + JSONL tailer.
fleet = ["dep:dashmap"]

# lightsquad — autonomous code-delivery orchestration engine.
# Phase 1 stub: gates module compilation only. Phase 3+ wires in nearai/ironclaw
# upstream crates (ironclaw_engine, ironclaw_approvals, ironclaw_capabilities,
# ironclaw_safety, ironclaw_secrets, ironclaw_run_state, ironclaw_processes,
# ironclaw_trust, ironclaw_common) via git deps pinned at rev 4fea8b3546
# (per .audit/nearai-ironclaw-license-supply-chain-2026-05-18.md verdict).
# Apache-2.0 attribution obligations land in lightarchitects-sdk/NOTICE.
#
# Extraction candidate — see ~/.claude/projects/-Users-kft-Projects/memory/
# project_lightarchitects_sdk_extraction_candidates.md
lightsquad = ["agent-cli", "http-client", "credentials", "dep:la-lightsquad", "dep:dashmap"]

# L1 agentic loop substrate — Strategy trait, LoopRunner, compose combinators,
# CritiqueRefine, phase spans. Does NOT require agent-cli (provider-agnostic).
loops-core = []

# Multi-voice sibling chatroom engine — speaker selection, personality engine,
# sibling discovery. Requires the agent provider layer (always-on).
chat = []

# ── Always-on external deps (union of all 13 merged crates) ──────────────────

[dependencies]
# Observability span types (public crate — traits + types, zero runtime deps)
la-ayinspan = { path = "../../theLightArchitect/la-crates/crates/la-ayinspan" }

# Agentic loop convergence traits (public crate — ConvergenceResult + 6 strategy traits)
la-loops = { path = "../../theLightArchitect/la-crates/crates/la-loops" }

# Structured Delivery Protocol (public crate — archetype framework + delivery vocabulary)
la-lightsquad = { path = "../../theLightArchitect/la-crates/crates/la-lightsquad", optional = true }

# Core runtime
libc        = { workspace = true }
rand        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
notify      = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
async-trait = "0.1"

# Crypto
hkdf          = { workspace = true }
hmac          = { workspace = true }
sha2          = { workspace = true }
aes-gcm       = { workspace = true }
ed25519-dalek = { workspace = true }
subtle        = { workspace = true }
secrecy       = { workspace = true }
zeroize       = { workspace = true }

# Auth
reqwest  = { workspace = true }
dirs     = "6"
hex      = "0.4"
chrono   = { workspace = true }
url      = "2"

# Common
uuid         = { workspace = true }
futures-util = { workspace = true }
regex        = { workspace = true }
moka         = { workspace = true }
walkdir      = { workspace = true }
fs2          = { workspace = true }

# Helix graph backend
neo4rs    = { workspace = true }
fastembed = { workspace = true }

# Arena
indicatif = { workspace = true }
clap      = { workspace = true }


# Auth CLI feature (axum OAuth callback, browser open, getrandom)
axum     = { workspace = true }
open     = { version = "5" }
getrandom = { version = "0.2" }

# SERAPH SSH transport
openssh = { workspace = true }

# SOUL SQLite backend
rusqlite = { workspace = true }

# Agent CLI subprocess (process-private tempdir for mcp-null.json)
tempfile = { workspace = true }

# Fleet tracking (optional — gated behind `fleet` feature)
dashmap = { workspace = true, optional = true }

# macOS keychain (crypto keychain feature)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["macros", "rt", "test-util"] }
tokio-test     = { workspace = true }
tempfile       = { workspace = true }
proptest       = { workspace = true }
pretty_assertions = { workspace = true }
mockito        = { workspace = true }
criterion      = { workspace = true }
futures-util   = { workspace = true }
serde_json     = { workspace = true }
testcontainers-modules = { version = "0.9", features = ["neo4j"] }
secrecy                = { workspace = true }

[[bench]]
name    = "retrieval_queries"
harness = false

# Real-Ollama smoke test — gated behind `lightsquad` (the only feature that
# exports OllamaCloudCodingProvider) and marked `#[ignore]` so it only runs
# when invoked explicitly with OLLAMA_API_KEY.
[[test]]
name             = "ollama_real_codegen"
path             = "tests/ollama_real_codegen.rs"
required-features = ["lightsquad"]

# Real-Ollama practical-utility test — regenerate the L0-L7 platform diagram
# from current source-tree facts. Same gating as ollama_real_codegen.
[[test]]
name             = "ollama_diagram_regen"
path             = "tests/ollama_diagram_regen.rs"
required-features = ["lightsquad"]

# Contract-driven regen with supervisor feedback loop — the load-bearing
# remediation for the topology/hallucination/layer gaps observed in v2.
[[test]]
name             = "ollama_diagram_regen_v3"
path             = "tests/ollama_diagram_regen_v3.rs"
required-features = ["lightsquad"]
